logo de la empresa

--- a/conocenos.html
+++ b/conocenos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UIF-8">
         <title>Conocenos</title>
-        <link rel="stylesheet"href="/CSS/formulario.css">
+        <link rel="stylesheet"href="CSS/formulario.css">
         <script src="/JS/formulario.js"></script>
     </head>
     <body>
@@ -18,7 +18,9 @@
                 <input type="submit" value="Enviar" class="btn-enviar">
             </div>
         </form>
-        <div><img src="/img/logo.png"  
-        width = 150px height = 150px /></div>
+        <div>
+            <img src="./img/logo.png"  
+            width = "250px" height = "250px" />
+        </div>
     </body>
 </html>
