--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@
                 </div>
                 <div class="col-foot">
                     <h4>Siguenos</h4>
-                    <ul>
-                        <a href="#"><li class="fab fa-facebook"></li></a>
-                        <a href="#"><li class="fab fa-twitter"></li></a>
-                        <a href="#"><li class="fab fa-instagram"></li></a>
-                    </ul>
+                    <div class="social-links">
+                        <ul>
+                            <a href="#"><li class="fab fa-facebook"></li></a>
+                            <a href="#"><li class="fab fa-twitter"></li></a>
+                            <a href="#"><li class="fab fa-instagram"></li></a>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </footer>
