--- a/Articulos.html
+++ b/Articulos.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
 
         <meta charset="UTF-8">
@@ -11,7 +10,6 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     </head>
-
     <body>
 
         <header>
@@ -27,38 +25,10 @@
             </div>
         </header>
 
+        <div class="space"></div>
+
         <main>
 
-            <div class="Galery">
-                <img src="./Images/main.jpg" alt="Bienvenido" title="Bienvenido" class="galery" width="100%">
-            </div>
-
-            <div class="Topics">
-                <section class="article">
-                    <a href="#">
-                        <img src="./Images/Anticonceptivos.jpg" alt="Metodos Anticonceptivos" title="Metodos Anticonceptivos"  width="90%">
-                        <p>Metodos snticonceptivos</p>
-                    </a>
-                </section>
-                <section class="article">
-                    <a href="#">
-                        <img src="./Images/ETS.jpg" alt="ETS & ITS" title="ETS & ITS"  width="90%">
-                        <p>Enfermedades de Transmición sexual</p>
-                    </a>
-                </section>
-                <section class="article">
-                    <a href="#">
-                        <img src="./Images/Derechos.png" alt="Derechos Sexuales y reproducttivos" title="LGBT+"  width="90%">
-                        <p>Derechos sexuales y reproducttivos</p>
-                    </a>
-                </section>
-                <section class="article">
-                    <a href="">
-                        <img src="./Images/LGBT.jpg" alt="Bandera LGBT+" title="LGBT+"  width="90%">
-                        <p>LGBT+</p>
-                    </a>
-                </section>
-            </div>
         </main>
         
         <footer>
@@ -106,5 +76,4 @@
         </footer>
 
     </body>
-
 </html>
