--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 </section>
                 <section class="article">
                     <a href="#">
-                        <img src="./Images/Derechos.png" alt="Derechos Sexuales y reproducttivos" title="LGBT+"  width="90%">
-                        <p>Derechos sexuales y reproducttivos</p>
+                        <img src="./Images/Derechos.png" alt="Salud y Bienestar" title="Salud y Bienestar"  width="90%">
+                        <p>Salud y Bienestar</p>
                     </a>
                 </section>
                 <section class="article">
@@ -89,7 +89,8 @@
                     <ul>
                         <li><a href="#">Preguntas frecuentes</a></li>
                         <li><a href="#">Envia preguntas</a></li>
-                        <li><a href="#">¿Qué es Codyrep</a></li>
+                        <li><a href="#">¿Qué es Codyrep?</a></li>
+                        <li><a href="#">Terminos y condiciones</a></li>
                     </ul>
                 </div>
                 <div class="col-foot">
