--- a/Articulos.html
+++ b/Articulos.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Codyrep</title>
         <link rel="stylesheet" type="text/css" href="./CSS/main.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/Articulos.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     </head>
@@ -28,7 +29,108 @@
         <div class="space"></div>
 
         <main>
-
+            <div class="barra-navegation">
+                <div class="Categoria">
+                    <h3>Aborto</h3>
+                    <ul>
+                        <li><a href="#">Aborto químico</a></li>
+                        <li><a href="#">Aborto Clandestino</a></li>
+                        <li><a href="#">Legalización del Aborto</a></li>
+                    </ul>
+                </div>
+                <div class="Categoria">
+                    <h3>Anticonceptivos</h3>
+                    <ul>
+                        <li><a href="#">Condones</a></li>
+                        <li><a href="#">Pastillas</a></li>
+                        <li><a href="#">Parche</a></li>
+                    </ul>
+                </div>
+                <div class="Categoria">
+                    <h3>Embarazo</h3>
+                    <ul>
+                        <li><a href="#">Planificación familiar</a></li>
+                        <li><a href="#">Embarazos de alto riesgo</a></li>
+                        <li><a href="#">Planificar tu embarazo</a></li>
+                    </ul>
+                </div>
+                <div class="Categoria">
+                    <h3>ITS & ETS</h3>
+                    <ul>
+                        <li><a href="#">Como prevenir ETS & ITS</a></li>
+                        <li><a href="#">Ser ceropositivo</a></li>
+                        <li><a href="#">Riesgos VIH</a></li>
+                    </ul>
+                </div>
+                <div class="Categoria">
+                    <h3>Orientación sexual y género</h3>
+                    <ul>
+                        <li><a href="#">Diversidad sexual</a></li>
+                        <li><a href="#">Género, una construcción social</a></li>
+                        <li><a href="#">Asexualidad</a></li>
+                    </ul>
+                </div>
+                <div class="Categoria">
+                    <h3>Salud y Bienestar</h3>
+                    <ul>
+                        <li><a href="#">Urología</a></li>
+                        <li><a href="#">Prevenir cancer de mama</a></li>
+                        <li><a href="#">Prevenir Cancer de prostata</a></li>
+                    </ul>
+                </div>
+                <div class="Categoria">
+                    <h3>LGBT+</h3>
+                    <ul>
+                        <li><a href="#">Derechos LGBT+</a></li>
+                        <li><a href="#">Marcha por la igualdad</a></li>
+                        <li><a href="#">Cine LGBT+</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="Topics">
+                <section class="article">
+                    <a href="">
+                        <img src="./Images/Aborto.jpg" alt="Aborto" title="Aborto"  width="90%">
+                        <p>Aborto</p>
+                    </a>
+                </section>
+                <section class="article">
+                    <a href="#">
+                        <img src="./Images/Anticonceptivos.jpg" alt="Metodos Anticonceptivos" title="Metodos Anticonceptivos"  width="90%">
+                        <p>Metodos snticonceptivos</p>
+                    </a>
+                </section>
+                <section class="article">
+                    <a href="">
+                        <img src="./Images/Embarazo.jpg" alt="Embarazo" title="Embarazo"  width="90%">
+                        <p>Embarazo</p>
+                    </a>
+                </section>
+                <section class="article">
+                    <a href="#">
+                        <img src="./Images/ETS.jpg" alt="ETS & ITS" title="ETS & ITS"  width="90%">
+                        <p>Enfermedades de Transmición sexual</p>
+                    </a>
+                </section>
+                <section class="article">
+                    <a href="">
+                        <img src="./Images/Orientación_Sexual.jpg" alt="Orientación Sexual Y Género" title="Orientación Sexual Y Género"  width="90%">
+                        <p>Orientación Sexual Y Género</p>
+                    </a>
+                </section>
+                <section class="article">
+                    <a href="#">
+                        <img src="./Images/Derechos.png" alt="Salud y Bienestar" title="Salud y Bienestar"  width="90%">
+                        <p>Salud y Bienestar</p>
+                    </a>
+                </section>
+                <section class="article">
+                    <a href="">
+                        <img src="./Images/LGBT.jpg" alt="Bandera LGBT+" title="LGBT+"  width="90%">
+                        <p>LGBT+</p>
+                    </a>
+                </section>
+            </div>
         </main>
         
         <footer>
@@ -59,7 +161,8 @@
                     <ul>
                         <li><a href="#">Preguntas frecuentes</a></li>
                         <li><a href="#">Envia preguntas</a></li>
-                        <li><a href="#">¿Qué es Codyrep</a></li>
+                        <li><a href="#">¿Qué es Codyrep?</a></li>
+                        <li><a href="#">Terminos y condiciones</a></li>
                     </ul>
                 </div>
                 <div class="col-foot">
