--- a/Aborto.html
+++ b/Aborto.html
@@ -8,6 +8,9 @@
         <title>Codyrep</title>
         <link rel="stylesheet" type="text/css" href="./CSS/main.css">
         <link rel="stylesheet" type="text/css" href="./CSS/Articulos.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/Articulo.css">
+        <link rel="stylesheet" type="text/css" href="./CSs/Topic.css">
+        <link rel="stylesheet" type="text/css" href="./CSs/Aborto.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     </head>
@@ -87,50 +90,25 @@
                     </ul>
                 </div>
             </div>
-            <div class="Topics">
-                <section class="Topic">
-                    <a href="./Aborto.html">
-                        <img src="./Images/Aborto.jpg" alt="Aborto" title="Aborto"  width="90%">
-                        <p>Aborto</p>
-                    </a>
+
+            <div class="list-articles">
+                <section class="element-article">
+                    <section class="Title-element">
+                        <h2><a href="./Articulo.html">Aborto quimico</a></h2>
+                    </section>
                 </section>
-                <section class="Topic">
-                    <a href="#">
-                        <img src="./Images/Anticonceptivos.jpg" alt="Metodos Anticonceptivos" title="Metodos Anticonceptivos"  width="90%">
-                        <p>Metodos snticonceptivos</p>
-                    </a>
+                <section class="element-article">
+                    <section class="Title-element">
+                        <h2>Aborto Clandestino</h2>
+                    </section>
                 </section>
-                <section class="Topic">
-                    <a href="">
-                        <img src="./Images/Embarazo.jpg" alt="Embarazo" title="Embarazo"  width="90%">
-                        <p>Embarazo</p>
-                    </a>
-                </section>
-                <section class="Topic">
-                    <a href="#">
-                        <img src="./Images/ETS.jpg" alt="ETS & ITS" title="ETS & ITS"  width="90%">
-                        <p>Enfermedades de Transmición sexual</p>
-                    </a>
-                </section>
-                <section class="Topic">
-                    <a href="">
-                        <img src="./Images/Orientación_Sexual.jpg" alt="Orientación Sexual Y Género" title="Orientación Sexual Y Género"  width="90%">
-                        <p>Orientación Sexual Y Género</p>
-                    </a>
-                </section>
-                <section class="Topic">
-                    <a href="#">
-                        <img src="./Images/Derechos.png" alt="Salud y Bienestar" title="Salud y Bienestar"  width="90%">
-                        <p>Salud y Bienestar</p>
-                    </a>
-                </section>
-                <section class="Topic">
-                    <a href="">
-                        <img src="./Images/LGBT.jpg" alt="Bandera LGBT+" title="LGBT+"  width="90%">
-                        <p>LGBT+</p>
-                    </a>
+                <section class="element-article">
+                    <section class="Title-element">
+                        <h2>Legalización del Aborto</h2>
+                    </section>
                 </section>
             </div>
+
         </main>
         
         <footer>
