--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
             </div>
 
             <div class="Topics">
-                <section class="article">
+                <section class="Topic">
                     <a href="#">
                         <img src="./Images/Anticonceptivos.jpg" alt="Metodos Anticonceptivos" title="Metodos Anticonceptivos"  width="90%">
                         <p>Metodos snticonceptivos</p>
                     </a>
                 </section>
-                <section class="article">
+                <section class="Topic">
                     <a href="#">
                         <img src="./Images/ETS.jpg" alt="ETS & ITS" title="ETS & ITS"  width="90%">
                         <p>Enfermedades de Transmición sexual</p>
                     </a>
                 </section>
-                <section class="article">
+                <section class="Topic">
                     <a href="#">
                         <img src="./Images/Derechos.png" alt="Salud y Bienestar" title="Salud y Bienestar"  width="90%">
                         <p>Salud y Bienestar</p>
                     </a>
                 </section>
-                <section class="article">
+                <section class="Topic">
                     <a href="">
                         <img src="./Images/LGBT.jpg" alt="Bandera LGBT+" title="LGBT+"  width="90%">
                         <p>LGBT+</p>
