--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
                 </div>
             </div>
         </footer>
-
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+        <script src="./JS/SweetAlert.js"></script>
     </body>
 
 </html>
