--- a/Bitacora.html
+++ b/Bitacora.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Codyrep</title>
         <link rel="stylesheet" type="text/css" href="./CSS/main.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/Bitacora.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     </head>
@@ -28,7 +29,40 @@
         <div class="space"></div>
 
         <main>
-
+            <div class="barra-navegation">
+                <section class="Foto"><img src="./Images/anonimo.png" alt="Usuario activo" title="Usuario Activo" width="90%"></section>
+                <section class="Datos-Usuario">
+                    <ul>
+                        <li><a href="./Perfil.html">Perfil</a></li>
+                        <li><a href="./Logros.html">Logros</a></li>
+                        <li><a href="./ResumenMensual.html">Resumen mensual</a></li>
+                    </ul>
+                </section>
+            </div>
+            <div class="Bitacora">
+                <section class="Registro">
+                    <h2>¿Tuviste sexo hoy?</h2>
+                    <button name="Sí">Sí</button>
+                    <button name="No">No</button>
+                </section>
+                <section class="Registro">
+                    <h2>Registrar Relaciones sexuales anteriores</h2>
+                    <p>Fecha cuando se tuvo una relación sexual</p>
+                    <input type="date" name"Relacion"><br>
+                    <button name="No">Aceptar</button>
+                </section>
+                <section class="Registro">
+                    <h2>Recordatorio de metodos anticonceptivos</h2>
+                    <p>¿Para cuándo los necesita?</p>
+                    <input type="date" name"anticonceptivos"><br>
+                    <button name="No">Aceptar</button>
+                </section>
+                <section class="Registro">
+                    <h2>Programar Revisión medica</h2>
+                    <p>¿Cuándo es su revisión?</p>
+                    <input type="date" name"Citas"><br>
+                </section>
+            </div>
         </main>
 
     </body>
