--- a/IniciarSesion.html
+++ b/IniciarSesion.html
@@ -43,7 +43,7 @@
                         <span></span>
                         <label>Contraseña</label>
                     </div>
-                    <input type="submit" value="Login">
+                    <button name="Login" class="Login"><a href="./Bitacora.html">Iniciar sesión</a></button>
                     <div class="registrarse"><a href="./Registrarse.html">Registrarme</a></div>
                     <div class="registrarse"><a href="./RegistrarseAdministrador.html">Registrarme como Administrador</a></div>
                 </form>
