--- a/Registrarse.html
+++ b/Registrarse.html
@@ -47,7 +47,7 @@
                         <p>Fecha de nacimiento</p>
                         <input type="date" name"FNacimiento">
                     </div>
-                    <input type="submit" value="Login">
+                    <button name="Login" class="Login"><a href="./Bitacora.html">Registrarme</a></button>
                     <div class="registrarse"><a href="./IniciarSesion.html">Iniciar sesión</a></div>
                     <div class="registrarse"><a href="./RegistrarseAdministrador.html">Registrarme como Administrador</a></div>
                 </form>
