--- a/RegistrarseAdministrador.html
+++ b/RegistrarseAdministrador.html
@@ -47,7 +47,7 @@
                         <p>Fecha de nacimiento</p>
                         <input type="date" name"FNacimiento">
                     </div>
-                    <input type="submit" value="Login">
+                    <button name="Login" class="Login"><a href="./Bitacora.html">Solicitar registro</a></button>
                     <div class="registrarse"><a href="./IniciarSesion.html">Iniciar Sesión</a></div>
                     <div class="registrarse"><a href="./Registrarse.html">Registrarme</a></div>
                 </form>
